[gd_scene load_steps=9 format=3 uid="uid://bjepjb07frqlm"]

[ext_resource type="Script" path="res://scripts/levelGrid.gd" id="1_gieju"]
[ext_resource type="PackedScene" uid="uid://bv42pw8if4uek" path="res://scenes/player.tscn" id="2_agswa"]
[ext_resource type="PackedScene" uid="uid://efng7n2os53p" path="res://scenes/game_over.tscn" id="3_pnatq"]
[ext_resource type="PackedScene" uid="uid://bv4yo2i22xkdj" path="res://scenes/score.tscn" id="4_crv1m"]
[ext_resource type="PackedScene" uid="uid://b3cplhwjyivfa" path="res://scenes/win_screen.tscn" id="5_op0bc"]
[ext_resource type="PackedScene" uid="uid://bcadbvv5h1f2f" path="res://scenes/pauseMenu.tscn" id="6_tskce"]
[ext_resource type="AudioStream" uid="uid://cbpxc7i4o47va" path="res://sounds/1257_interface-sound-02.wav" id="7_a1unx"]
[ext_resource type="PackedScene" uid="uid://co1swiykqoc8e" path="res://scenes/rewards.tscn" id="7_syfqc"]

[node name="LevelGrid" type="Node2D"]
script = ExtResource("1_gieju")
gridWidth = 10
gridHeight = 10

[node name="Player" parent="." instance=ExtResource("2_agswa")]
position = Vector2(64, 64)

[node name="beans" type="Node2D" parent="."]

[node name="Border" type="Line2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(359, -9)
anchor_mode = 0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Score" parent="CanvasLayer" instance=ExtResource("4_crv1m")]

[node name="GameOver" parent="CanvasLayer" instance=ExtResource("3_pnatq")]
visible = false

[node name="WinScreen" parent="CanvasLayer" instance=ExtResource("5_op0bc")]
visible = false

[node name="Rewards" parent="CanvasLayer" instance=ExtResource("7_syfqc")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("6_tskce")]
visible = false

[node name="PickupSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_a1unx")
volume_db = -6.118
